k8s/master/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-master
  namespace: master
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-api-master
  template:
    metadata:
      labels:
        app: node-api-master
    spec:
      containers:
      - name: node-api
        image: node-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
