k8s/master/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: node-api-master
    namespace: master
spec:
    selector:
    app: node-api-master
    ports:
    - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30000
    type: NodePort
