k8s/master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api-master
  namespace: master
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: master.node-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-api-master
            port:
              number: 80
